hover fixed on mobile

--- a/src/scss/pages/portfolio.scss
+++ b/src/scss/pages/portfolio.scss
@@ -109,7 +109,7 @@
     } // portfolio-filter
 
     .portfolio-filter.mixitup-control-active {
-        background: rgba($primary, 0.8);
+        background: rgba($primary, 0.8) !important;
     }
 
 
